--- a/edit-profile.html
+++ b/edit-profile.html
@@ -32,7 +32,7 @@
 
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="search.html">Search</a></li>
             <li><a href="members.html">Members</a></li>
             <li><a href="groups.html">Groups</a></li>
