--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="text-center">
                         <h2>Login</h2>
                     </div>
-                    <form class="form-horizontal" action="edit-profile.html">
+                    <form class="form-horizontal" action="home.html">
                         <div class="form-group">
                             <label class="control-label col-sm-4" for="email">Email:</label>
                             <div class="col-sm-6">
