--- a/members.html
+++ b/members.html
@@ -31,9 +31,9 @@
 
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="search.html">Search</a></li>
-            <li><a href="members.html">Members</a></li>
+            <li class="active"><a href="members.html">Members</a></li>
             <li><a href="groups.html">Groups</a></li>
             <li><a href="meetings.html">Meetings</a></li>
              <li><a href="index.html"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
@@ -49,7 +49,7 @@
             <h3>Members</h3>
             <hr>
             <div class="media-left">
-              <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido">  
+              <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido">
             </div>
             <div class="media-body">
               <h4 class="media-heading"><a href="profile.html">Nombre Apellido</a></h4>
@@ -69,7 +69,7 @@
         <div>
           <div class="media">
             <div class="media-left">
-              <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido">  
+              <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido">
             </div>
             <div class="media-body">
               <h4 class="media-heading"><a href="profile.html">Nombre Apellido</a></h4>
@@ -89,7 +89,7 @@
         <div>
           <div class="media">
             <div class="media-left">
-              <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido">  
+              <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido">
             </div>
             <div class="media-body">
               <h4 class="media-heading"><a href="profile.html">Nombre Apellido</a></h4>
@@ -127,7 +127,7 @@
                 </div>
               </div>
             </div>
-    
+
 
 
 
