--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script>
     $(document).ready(function(){
-        $('[data-toggle="popover"]').popover(); 
+        $('[data-toggle="popover"]').popover();
     });
     </script>
 
@@ -38,7 +38,7 @@
 
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="search.html">Search</a></li>
             <li><a href="members.html">Members</a></li>
             <li><a href="groups.html">Groups</a></li>
@@ -54,7 +54,7 @@
         <div>
           <div class="media">
             <div class="media-left">
-              <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido"="popover" data-content="sgsdfgsd" data-trigger="hover"> 
+              <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido"="popover" data-content="sgsdfgsd" data-trigger="hover">
             </div>
             <div class="media-body">
               <h4 class="media-heading">Nombre Apellido</h4>
@@ -169,7 +169,7 @@
           </div>
         </div>
       </div>
-    
+
       <!-- Message -->
       <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog modal-sm">
