--- a/search.html
+++ b/search.html
@@ -40,8 +40,8 @@
 
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="search.html">Search</a></li>
+                    <li><a href="home.html">Home</a></li>
+                    <li class="active"><a href="search.html">Search</a></li>
                     <li><a href="members.html">Members</a></li>
                     <li><a href="groups.html">Groups</a></li>
                     <li><a href="meetings.html">Meetings</a></li>
@@ -87,7 +87,7 @@
                                 <label class="col-sm-3"><input name="sex" type="radio"> Woman</label>
                             </div>
                             <div class="col-sm-11 text-right">
-                              <button type="button" class="btn btn-info btn-xs" data-toggle="collapse" data-target="#advance">Advance</button>
+                              <button type="button" class="btn btn-info btn-xs" data-toggle="collapse" data-target="#advance">Advanced search</button>
                             </div>
                             <div id="advance" class="collapse">
 
