--- a/groups.html
+++ b/groups.html
@@ -38,10 +38,10 @@
 
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="search.html">Search</a></li>
             <li><a href="members.html">Members</a></li>
-            <li><a href="groups.html">Groups</a></li>
+            <li class="active"><a href="groups.html">Groups</a></li>
             <li><a href="meetings.html">Meetings</a></li>
              <li><a href="index.html"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
           </ul>
