--- a/myfriends.html
+++ b/myfriends.html
@@ -31,7 +31,7 @@
 
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="search.html">Search</a></li>
             <li><a href="members.html">Members</a></li>
             <li><a href="groups.html">Groups</a></li>
@@ -51,7 +51,7 @@
             <div class="media-left">
               <a href="profile.html">
               <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido">
-              </a>  
+              </a>
             </div>
             <div class="media-body">
               <h4 class="media-heading"><a href="profile.html">Nombre Apellido</a></h4>
@@ -73,7 +73,7 @@
             <div class="media-left">
               <a href="profile.html">
               <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido">
-              </a>    
+              </a>
             </div>
             <div class="media-body">
               <h4 class="media-heading"><a href="profile.html">Nombre Apellido</a></h4>
@@ -111,7 +111,7 @@
           </div>
         </div>
       </div>
-    
+
 
 
 
@@ -127,7 +127,7 @@
             <a href="myprofile.html" class="list-group-item"><span class="glyphicon glyphicon-user"></span> My profile</a>
             <a href="messages.html" class="list-group-item"><span class="glyphicon glyphicon-envelope"></span> Messages <span class="badge">3</span></a>
             <a href="notifications.html" class="list-group-item"><span class="glyphicon glyphicon-globe"></span> Notifications<span class="badge">7</span></a>
-            <a href="myfriends.html" class="list-group-item"><span class="glyphicon glyphicon-th-list"></span> My Friends</a>
+            <a href="myfriends.html" class="list-group-item active"><span class="glyphicon glyphicon-th-list"></span> My Friends</a>
             <a href="mygroups.html" class="list-group-item"><span class="glyphicon glyphicon-th-list"></span> My Groups</a>
           </div>
         </div>
