--- a/mygroups.html
+++ b/mygroups.html
@@ -38,7 +38,7 @@
 
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="search.html">Search</a></li>
             <li><a href="members.html">Members</a></li>
             <li><a href="groups.html">Groups</a></li>
@@ -101,7 +101,7 @@
             <a href="messages.html" class="list-group-item"><span class="glyphicon glyphicon-envelope"></span> Messages <span class="badge">3</span></a>
             <a href="notifications.html" class="list-group-item"><span class="glyphicon glyphicon-globe"></span> Notifications<span class="badge">7</span></a>
             <a href="myfriends.html" class="list-group-item"><span class="glyphicon glyphicon-th-list"></span> My Friends</a>
-            <a href="mygroups.html" class="list-group-item"><span class="glyphicon glyphicon-th-list"></span> My Groups</a>
+            <a href="mygroups.html" class="list-group-item active"><span class="glyphicon glyphicon-th-list"></span> My Groups</a>
           </div>
         </div>
         <div id="searchPanel" class="well">
